APIs/netboxdemo.com/2.4/java-client/docs/WritableCircuit.md


# WritableCircuit


## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
|**cid** | **String** |  |  |
|**comments** | **String** |  |  [optional] |
|**commitRate** | **Integer** |  |  [optional] |
|**created** | **LocalDate** |  |  [optional] [readonly] |
|**customFields** | **Object** |  |  [optional] |
|**description** | **String** |  |  [optional] |
|**id** | **Integer** |  |  [optional] [readonly] |
|**installDate** | **LocalDate** |  |  [optional] |
|**lastUpdated** | **OffsetDateTime** |  |  [optional] [readonly] |
|**provider** | **Integer** |  |  |
|**status** | [**StatusEnum**](#StatusEnum) |  |  [optional] |
|**tags** | **List&lt;String&gt;** |  |  [optional] |
|**tenant** | **Integer** |  |  [optional] |
|**type** | **Integer** |  |  |



## Enum: StatusEnum

| Name | Value |
|---- | -----|
| NUMBER_2 | 2 |
| NUMBER_3 | 3 |
| NUMBER_1 | 1 |
| NUMBER_4 | 4 |
| NUMBER_0 | 0 |
| NUMBER_5 | 5 |



